XE-863: Possibility to resize input area beyond visible page Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@35813 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -150,6 +150,7 @@ textarea, select {
   background-color: $theme.pageContentBackgroundColor ;
   border: 1px solid $theme.borderColor;
   color: $theme.textColor;
+  max-width: 100%; /* Prevent resizing beyond the visible area in modern browsers */
 }
 
 /* -----------------------Tables-------------------------*/
